--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "fuse.js": "^7.0.0",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-svg": "^15.3.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
+    "@babel/preset-env": "^7.24.6",
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "0.74.83",
     "@react-native/eslint-config": "0.74.83",
@@ -33,6 +35,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
+    "ts-jest": "^29.1.4",
     "typescript": "^5.4.5"
   },
   "engines": {
